# meshvpnP2P

./: CONTRIBUTING.md  LICENSE  README.md
bins/meshvpn-bootstrap/: Cargo.toml
bins/meshvpn-bootstrap/src/: main.rs
bins/meshvpn-client/: Cargo.toml
bins/meshvpn-client/src/: client.rs  config.rs  daemon.rs  main.rs
bins/meshvpn-dht-bootstrap/: Cargo.toml
bins/meshvpn-dht-bootstrap/src/: main.rs
bins/meshvpn-discovery/: Cargo.toml
bins/meshvpn-discovery/src/: main.rs
bins/meshvpn-exit-node/: Cargo.toml
bins/meshvpn-exit-node/src/: main.rs
crates/meshvpn-core/: Cargo.toml
crates/meshvpn-core/src/: circuit.rs  config.rs  engine.rs  error.rs  handshake.rs  lib.rs  path.rs  relay.rs  router.rs
crates/meshvpn-crypto/: Cargo.toml
crates/meshvpn-crypto/src/: error.rs  identity.rs  keys.rs  lib.rs  onion.rs  symmetric.rs
crates/meshvpn-dht/: Cargo.toml
crates/meshvpn-dht/src/: error.rs  lib.rs  network.rs  node.rs  protocol.rs  routing.rs  storage.rs
crates/meshvpn-exit/: Cargo.toml
crates/meshvpn-exit/src/: circuit_handler.rs  config.rs  error.rs  lib.rs  logging.rs  nat.rs  sync.rs
crates/meshvpn-network/: Cargo.toml
crates/meshvpn-network/src/: connection.rs  error.rs  lib.rs  nat.rs  packet.rs  transport.rs  wireguard.rs
crates/meshvpn-network/src/p2p/: circuit.rs  discovery.rs  hole_punch.rs  mod.rs  protocol.rs  relay.rs  stun.rs
crates/meshvpn-network/src/tun/: linux.rs  macos.rs  mod.rs  windows.rs
crates/meshvpn-payment/: Cargo.toml
crates/meshvpn-payment/src/: error.rs  lib.rs  monero.rs  token.rs  verifier.rs
docs/: ARCHITECTURE.md  PRESSURE_ONTOLOGY.md  ROADMAP.md
gui/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
gui/src/: App.tsx  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: commands.rs  config.rs  main.rs  state.rs  tray.rs
infra/: README.md
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf
