[package]
name = "meshvpn-bootstrap"
description = "MeshVPN Bootstrap Node - DHT bootstrap server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "meshvpn-bootstrap"
path = "src/main.rs"

[dependencies]
meshvpn-crypto = { path = "../../crates/meshvpn-crypto" }
meshvpn-network = { path = "../../crates/meshvpn-network" }
meshvpn-dht = { path = "../../crates/meshvpn-dht" }

tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { version = "4.4", features = ["derive"] }
