[package]
name = "meshvpn-client"
description = "MeshVPN Client - Privacy-focused P2P VPN client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "meshvpn"
path = "src/main.rs"

[dependencies]
meshvpn-crypto = { path = "../../crates/meshvpn-crypto" }
meshvpn-network = { path = "../../crates/meshvpn-network" }
meshvpn-core = { path = "../../crates/meshvpn-core" }
meshvpn-dht = { path = "../../crates/meshvpn-dht" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }

# CLI
clap = { version = "4.4", features = ["derive"] }
