[package]
name = "meshvpn-dht-bootstrap"
description = "MeshVPN DHT Bootstrap Node"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "meshvpn-dht-bootstrap"
path = "src/main.rs"

[dependencies]
meshvpn-dht = { path = "../../crates/meshvpn-dht" }
meshvpn-crypto = { path = "../../crates/meshvpn-crypto" }
meshvpn-network = { path = "../../crates/meshvpn-network" }

tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { version = "4.4", features = ["derive"] }
