[package]
name = "meshvpn-core"
description = "Core protocol implementation for MeshVPN - circuit building, relay logic, traffic routing"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meshvpn-crypto = { path = "../meshvpn-crypto" }
meshvpn-network = { path = "../meshvpn-network" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
