[package]
name = "meshvpn-exit"
description = "Exit node implementation for MeshVPN"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
aws = ["aws-config", "aws-sdk-dynamodb", "aws-sdk-s3", "aws-sdk-ec2"]

[dependencies]
meshvpn-crypto = { path = "../meshvpn-crypto" }
meshvpn-network = { path = "../meshvpn-network" }
meshvpn-core = { path = "../meshvpn-core" }
meshvpn-dht = { path = "../meshvpn-dht" }
meshvpn-payment = { path = "../meshvpn-payment" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# AWS SDK - optional, only needed for full exit node mode
aws-config = { version = "1.1", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-dynamodb = { version = "1.11", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-s3 = { version = "1.11", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }
aws-sdk-ec2 = { version = "1.11", default-features = false, features = ["behavior-version-latest", "rt-tokio"], optional = true }

# HTTP client for metadata service
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
