[package]
name = "meshvpn-payment"
description = "Crypto payment verification for MeshVPN subscriptions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
meshvpn-crypto = { path = "../meshvpn-crypto" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = "0.21"
serde-big-array = "0.5"

# HTTP client for blockchain APIs
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
