[package]
name = "meshvpn-gui"
version = "0.1.0"
description = "MeshVPN Desktop Client"
authors = ["MeshVPN"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-autostart = "2.0"

# MeshVPN core
meshvpn-crypto = { path = "../../crates/meshvpn-crypto" }
meshvpn-network = { path = "../../crates/meshvpn-network" }
meshvpn-core = { path = "../../crates/meshvpn-core" }
meshvpn-dht = { path = "../../crates/meshvpn-dht" }
meshvpn-payment = { path = "../../crates/meshvpn-payment" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# System info
sysinfo = "0.30"

# Configuration
directories = "5"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

# Hex encoding
hex = "0.4"

# Hashing
blake3 = "1.5"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
